fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ a{
   position:relative;
   background-color:rgba(10, 134, 188,0.7);
   z-index: 1;
-  height:90px;
+  height:100px;
 }
 .transparent-div .div-2{
   position:relative;
